# AvatarStreamProtocol

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
.tests/: test.py
src/streaming_protocol/: __init__.py
src/streaming_protocol.egg-info/: PKG-INFO  SOURCES.txt
